# hse-skitle

./: .gitignore  Makefile  README.md  srs.md  werf.yaml
.github/workflows/: common.yml
.helm/: 001-jobs.yaml  010-ingress.yaml
.helm/templates/: 000-registrysecret.yaml  001-jobs.yaml  002-jobs-postgres.yaml  003-auth.yaml  004-auth-postgres.yaml  010-ingress.yaml
backend/auth/: Dockerfile  db.sqlite3  requirements.txt  run.sh
backend/auth/app/: models.py  views.py
backend/auth/app/migrations/: 0001_initial.py
backend/auth/project/: settings.py  urls.py
backend/jobs/: Dockerfile  go.mod  go.sum
backend/jobs/cmd/server/: main.go
backend/jobs/internal/config/: config.go
backend/migrations/: master.sql  payments.sql  rating.sql  status.sql  task.sql  users.sql
docs/: UseCaseDiagram.md  product-spec.md
docs/api/: payments.yaml  ratings.yaml  schedule.yaml  swagger.yaml  tasks.yaml  users.yaml
docs/design/: app-subsystems.drawio  design.md  func-decomposition.drawio  server-subsystems.drawio
hw-koalany/: 8q.py
hw/defaulterrr/: README.md
hw/defaulterrr/kwic/: concord.py  kwic.py  main.py  pyproject.toml
hw/defaulterrr/kwic/example/: in.txt
hw/defaulterrr/queens/: main.py
hw/kiwikk/asdHw/: README.md
hw/kiwikk/asdHw/src/eightqueens/: EightQueens.java
hw/koalannette/: README.md
hw/miroshnik/kwic/: README.md  example.txt  solution.py
hw/miroshnik/queens/: README.md  solution.py
ios/skittle/skittle/: ContentView.swift  TiledView.swift  colors.swift  skittleApp.swift
ios/skittle/skittle.xcodeproj/: project.pbxproj
(+12 files in other folders)
