[tool.poetry]
name = "kwic"
version = "0.1.0"
description = "KWIC implementation in Python"
authors = ["defaulterrr"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
